Edit the mobile version

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div style="background-image: url(./Images/Header\ Photos/08d625_f9e4b90a9f704239a18c8eb2d6a2fad7~mv2.webp);"
           class="h-screen flex items-center justify-center">
           <div class="flex flex-col items-center justify-center">
-            <span class="text-[yellow] text-4xl ">Guaranteed Highest Return on Investment</span>
-            <button class="border text-white p-4 font-bold m-8 hover:bg-yellow-400">
+            <span class="text-[yellow] text-lg lg:text-4xl ">Guaranteed Highest Return on Investment</span>
+            <button class="border text-white p-2 lg:p-4 font-bold m-4 lg:m-8 hover:bg-yellow-400">
                 <a href="https://www.inversion-eg.com/contact"></a>BECOME ONE OR OUR SUCCESS STORIES
             </button>
           </div>
@@ -42,8 +42,8 @@
 
     <!-- Header Two -->
 
-    <div class="grid grid-cols-3 bg-[#2d2e2d] ">
-        <div class=" text-white m-16 whitespace-pre-line">
+    <div class="grid grid-cols-1 lg:grid-cols-3 bg-[#2d2e2d] ">
+        <div class=" text-white m-8 lg:m-16 whitespace-pre-line">
             <span class="text-4xl mb-12">Get To Know Us</span>
             <p>With a successful track record in shaping some of Egypt’s landmark projects, the company
                  leverages strategic partnerships with leading experts in the design, development, and
@@ -69,10 +69,10 @@
           class="flex flex-col bg-fixed items-center justify-center p-12">
 
           <div class="flex flex-col">
-            <span class="text-white text-5xl mb-16">INVERSION TODAY</span>
+            <span class="text-white text-lg lg:text-5xl mb-8 lg:mb-16">INVERSION TODAY</span>
           </div>
 
-          <div class="grid grid-cols-3 text-6xl text-center">
+          <div class="grid grid-cols-1 gap-10 lg:grid-cols-3 text-lg lg:text-6xl text-center">
             <div class="flex flex-col">
                 <span class="text-[yellow]">22</span>
                 <span class="text-white">Employees</span>
@@ -94,8 +94,8 @@
           class="flex relative flex-col items-center justify-center p-12">
           <div class="bg-[#2e2e2d] opacity-[0.9] absolute inset-0 z-10"></div>
           <div class="flex flex-col relative z-20">
-            <span class="text-[yellow] flex items-center justify-center  text-5xl mb-16">Our Services</span>
-            <p class="text-white flex items-center justify-center text-center mx-48 text-xl mb-12">
+            <span class="text-[yellow] flex items-center justify-center text-lg lg:text-5xl mb-16 lg:mb-16">Our Services</span>
+            <p class="text-white flex items-center justify-center text-center mx-auto lg:mx-48 text-sm lg:text-xl mb-12">
                 Inversion is a next generation enabler and an outsourcing partner boasting 360-degree
                  niche competencies that empower investors to grow beyond their potential. Rooted in
                   in-depth market knowledge and a seamless process that covers investment needs
@@ -103,7 +103,7 @@
                     comprehensive real estate management services ahead of industry norms.
             </p>
 
-            <div class="grid grid-cols-2 items-center justify-center max-w-3xl mx-auto">
+            <div class="grid grid-cols-1 lg:grid-cols-2 items-center justify-center max-w-3xl mx-auto">
                 <div class="flex flex-col items-center justify-center">
                     <img class="pb-8" src="./Images/Our Services/1.webp">
                     <span class="text-[yellow] pl-4 text-xl">Development Services</span>
@@ -135,8 +135,8 @@
     <!-- OUR CLIENTS -->
 
     <div class="bg-[#2d2e2d]">
-        <span class="text-[white] flex items-center justify-center text-5xl py-16">OUR CLIENTS</span>
-        <div class="grid grid-cols-5 p-8">
+        <span class="text-[white] flex items-center justify-center text-lg lg:text-5xl py-8 lg:py-16">OUR CLIENTS</span>
+        <div class="grid grid-cols-3 lg:grid-cols-5 p-8">
             <img src="./Images/Our Clients/Al ahly.webp">
             <img src="./Images/Our Clients/La vista.webp">
             <img src="./Images/Our Clients/Mountain view.webp">
@@ -164,8 +164,8 @@
 
     <footer>
         <div class="bg-yellow-300 flex relative flex-col items-center justify-center p-16">
-            <span class="text-4xl pb-8 pr-96">INVERSION</span>
-            <div class="grid grid-cols-2 px-72">
+            <span class="text-lg lg:text-4xl pb-8 pr-96">INVERSION</span>
+            <div class="grid grid-cols-1 lg:grid-cols-2 px-4 lg:px-72">
                 <div>
                     <span class="pb-8 text-xl font-bold">Location:</span>
                     <div>
