--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div>
                     <span class="pb-8 text-xl font-bold">Location:</span>
                     <div>
-                        <span>Building 2, square 127, Almoltaqa Elx Arabi Sheraton, Heliopolis, Cairo, Egypt</span><br>
+                        <span>Building 2, square 127, Almoltaqa El Arabi Sheraton, Heliopolis, Cairo, Egypt</span><br>
                         <a class="underline decoration-1" href="#">Email: Info@inversion-eg.com</a><br>
                         <span>Call: (+02) 20643142</span>
                     </div>
