Add responsive to "about" file

--- a/about.html
+++ b/about.html
@@ -30,14 +30,14 @@
 
     <div class="bg-[#2d2e2d] h-screen flex flex-col items-center justify-center">
           <div class="flex flex-col items-center justify-center">
-            <span class="text-[white] font-bold text-6xl pb-8">About Us</span>
-            <p class="text-white text-lg max-w-3xl mx-auto pb-8">
+            <span class="text-[white] font-bold text-2xl lg:text-6xl pb-4 lg:pb-8">About Us</span>
+            <p class="text-white text-base lg:text-lg max-w-md lg:max-w-3xl mx-auto pb-4 lg:pb-8">
                 Inversion is the brainchild of professional industry experts who exist to challenge the status quo.
                  With a successful track record in shaping some of Egypt’s landmark projects, the company
                   leverages strategic partnerships with leading experts in the design, development, and
                    construction field, enabling investors to grow in record time with minimal cost, and risk-free.
             </p>
-            <p class="text-white text-lg max-w-3xl mx-auto">
+            <p class="text-white text-base lg:text-lg max-w-md lg:max-w-3xl mx-auto">
                 The company’s strategic and holistic outlook on consultancy offers made-to-measure strategies
                  for investment success that puts improved core efficiency, expansion of capabilities, and
                   hassle-free processes at its forefront.
@@ -49,22 +49,22 @@
 
     <div style="background-image: url(./About\ Images/08d625_56c417dc7e994c0dafb81baf20c8c761~mv2.webp);"   
             class="flex items-center bg-fixed bg-no-repeat  bg-fill bg-center bg-cover justify-center">
-            <div class="flex flex-col bg-[#2d2e2d] p-4 m-20 px-40">
-                <span class="text-white flex flex-col text-4xl font-bold pb-2 text-center">Innovative</span>
-                <span class="text-white flex flex-col text-4xl font-bold pb-2 text-center">Insightful</span>
-                <span class="text-white flex flex-col text-4xl font-bold pb-2 text-center">inspirational</span>
+            <div class="flex flex-col bg-[#2d2e2d] p-2 lg:p-4 m-10 lg:m-20 px-20 lg:px-40">
+                <span class="text-white flex flex-col text-base lg:text-4xl font-bold pb-1 lg:pb-2 text-center">Innovative</span>
+                <span class="text-white flex flex-col text-base lg:text-4xl font-bold pb-1 lg:pb-2 text-center">Insightful</span>
+                <span class="text-white flex flex-col text-base lg:text-4xl font-bold pb-1 lg:pb-2 text-center">inspirational</span>
             </div>
         
     </div>
 
     <!-- VISION -->
 
-    <div class="grid grid-cols-2 bg-[#2e2e2d]  h-screen">
+    <div class="grid grid-cols-1 lg:grid-cols-2 bg-[#2e2e2d]  h-screen">
         <div style="background-image: url(./About\ Images/Vision/08d625_d6535645920d41478c7a69f51fc84020~mv2.webp);">
         </div>
         <div class="flex flex-col items-center justify-center">
-            <span class="text-white  text-4xl font-bold pb-8">Vision</span>
-            <p class="text-white flex items-center justify-center text-lg text-center whitespace-pre-line">
+            <span class="text-white text-base lg:text-4xl font-bold pb-1 lg:pb-8">Vision</span>
+            <p class="text-white flex items-center justify-center text-base lg:text-lg text-center whitespace-pre-line">
                 To become the back bone business consultants
                  to all leading real-estate development
                  businesses, both in Egypt and The Middle East
@@ -74,10 +74,10 @@
 
     <!-- Mission -->
 
-    <div class="grid grid-cols-2 bg-[#2e2e2d]  h-screen">
+    <div class="grid grid-cols-1 lg:grid-cols-2 bg-[#2e2e2d]  h-screen">
         <div class="flex flex-col items-center justify-center">
-            <span class="text-white  text-5xl font-bold pb-8">Mission</span>
-            <p class="text-white flex items-center justify-center text-center text-lg whitespace-pre-line">
+            <span class="text-white text-base lg:text-5xl font-bold pb-0 lg:pb-8">Mission</span>
+            <p class="text-white flex items-center justify-center text-center text-base lg:text-lg whitespace-pre-line">
                 To inspire a new generation of developers to pull-off a 
                 fair real-estate development canons.
             </p>
@@ -92,10 +92,10 @@
 
     <footer>
         <div class="bg-yellow-300 flex relative flex-col items-center justify-center p-16">
-            <span class="text-4xl pb-8 pr-96">INVERSION</span>
-            <div class="grid grid-cols-2 px-72">
+            <span class="text-base lg:text-4xl pb-4 lg:pb-8 pr-48 lg:pr-96">INVERSION</span>
+            <div class="grid grid-cols-1 lg:grid-cols-2 px-4 lg:px-72">
                 <div>
-                    <span class="pb-8 text-xl font-bold">Location:</span>
+                    <span class="pb-4 lg:pb-8 text-base lg:text-xl font-bold">Location:</span>
                     <div>
                         <span>Building 2, square 127, Almoltaqa El Arabi Sheraton, Heliopolis, Cairo, Egypt</span><br>
                         <a class="underline decoration-1" href="#">Email: Info@inversion-eg.com</a><br>
@@ -104,7 +104,7 @@
                 </div>
 
                 <div>
-                    <span class="pb-8 text-xl font-bold">Join Our Team:</span>
+                    <span class="pb-4 lg:pb-8 text-base lg:text-xl font-bold">Join Our Team:</span>
                     <div>
                         <span>If you are a dynamic professional  wishing to excel in a collaborative
                               work environment that celebrates  individual competencies that know
