--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <footer>
         <div class="bg-yellow-300 flex relative flex-col items-center justify-center p-16">
-            <span class="text-lg lg:text-4xl pb-8 pr-96">INVERSION</span>
+            <span class="text-lg lg:text-4xl pb-4 lg:pb-8 pr-48 lg:pr-96">INVERSION</span>
             <div class="grid grid-cols-1 lg:grid-cols-2 px-4 lg:px-72">
                 <div>
                     <span class="pb-8 text-xl font-bold">Location:</span>
