--- a/Services.html
+++ b/Services.html
@@ -29,8 +29,8 @@
     <!-- Header one -->
 
     <div class="bg-[#595959] flex flex-col items-center justify-center m-14">
-        <div class="p-12">
-          <p class="text-white text-5xl font-bold text-center whitespace-pre-line pb-6">
+        <div class="p-6 lg:p-12">
+          <p class="text-white text-xl lg:text-5xl font-bold text-center whitespace-pre-line pb-3 lg:pb-6">
             Comprehensive Services For The
             Highest Return On Investment
           </p>
@@ -43,7 +43,7 @@
     <!-- Header Two -->
 
     <div class="flex items-center justify-center">
-        <p class="whitespace-pre-line text-center text-white text-lg pb-8">
+        <p class="whitespace-pre-line text-center text-white text-sm lg:text-lg pb-8">
             Inversion is a next-generation enabler and an outsourcing partner boasting 360-
             degree niche competencies that empower investors to grow beyond their
              potential. Rooted in in-depth market knowledge and a seamless process that
@@ -59,10 +59,10 @@
 
     <footer>
         <div class="bg-yellow-300 flex relative flex-col items-center justify-center p-16">
-            <span class="text-4xl pb-8 pr-96">INVERSION</span>
-            <div class="grid grid-cols-2 px-72">
+            <span class="text-base lg:text-4xl pb-4 lg:pb-8 pr-48 lg:pr-96">INVERSION</span>
+            <div class="grid grid-cols-1 lg:grid-cols-2 px-4 lg:px-72">
                 <div>
-                    <span class="pb-8 text-xl font-bold">Location:</span>
+                    <span class="pb-4 lg:pb-8 text-base lg:text-xl font-bold">Location:</span>
                     <div>
                         <span>Building 2, square 127, Almoltaqa El Arabi Sheraton, Heliopolis, Cairo, Egypt</span><br>
                         <a class="underline decoration-1" href="#">Email: Info@inversion-eg.com</a><br>
