Add responsive to "projects" file

--- a/projects.html
+++ b/projects.html
@@ -29,20 +29,20 @@
     <!-- Header one -->
 
     <div class="flex flex-col ml-12 mt-24 text-white ">
-        <span class="text-6xl font-bold mb-6">Our Projects</span>
-        <p class="text-xl">A Portfolio To Be Proud Of.</p>
+        <span class="text-3xl lg:text-6xl font-bold mb-3 lg:mb-6">Our Projects</span>
+        <p class="text-base lg:text-xl">A Portfolio To Be Proud Of.</p>
     </div>
 
     <!-- Header Two -->
 
     <section>
-        <div class="grid grid-cols-3 m-7">
+        <div class="grid grid-cols-1 lg:grid-cols-3 m-1 lg:m-7">
             <!-- First Col -->
             <div>
-                <div class="flex flex-col p-4 space-y-10">
+                <div class="flex flex-col p-4 space-y-5 lg:space-y-10">
                     <div class="group relative">
                         <a href="#">
-                            <img src="./Projects Images/08d625_ef299759128145dfbb31d46854e2622f~mv2.png">
+                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_ef299759128145dfbb31d46854e2622f~mv2.png">
                             <div class="bg-gray-950 bg-opacity-50 opacity-0 group-hover:opacity-100 absolute inset-0 p-10">
                                 <span class="block border-t border-white text-white text-3xl font-bold pt-4">Blue Tree</span>
                             </div>
@@ -50,7 +50,7 @@
                     </div>
                     <div class="group relative">
                         <a href="#">
-                            <img src="./Projects Images/08d625_64fd2de6492e4014b29c22d8105426f6~mv2.webp">
+                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_64fd2de6492e4014b29c22d8105426f6~mv2.webp">
                             <div class="bg-gray-950 bg-opacity-50 opacity-0 group-hover:opacity-100 absolute inset-0 p-10">
                                 <span class="block border-t border-white text-white text-3xl font-bold pt-4">Magnom</span>
                             </div>
@@ -58,12 +58,12 @@
                     </div>
                     <div class="group relative">
                         <a href="#">
-                            <img src="./Projects Images/08d625_c194c38fc07a4773a2b0691708d70afa~mv2.webp">
+                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_c194c38fc07a4773a2b0691708d70afa~mv2.webp">
                             <div class="bg-gray-950 bg-opacity-50 opacity-0 group-hover:opacity-100 absolute inset-0 p-10">
                                 <span class="block border-t border-white text-white text-2xl font-bold pt-4">
                                     Park Lane Compundhood
                                 </span>
-                                <p class="text-white pt-5 px-8">
+                                <p class="text-white text-xs lg:text-base pt-0 lg:pt-5 px-0 lg:px-8">
                                     El Attal Holding brings to the new captal Park Lane compoundhood a unique
                                      cross over between a private secured compound.
                                 </p>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="group relative">
                         <a href="#">
-                            <img src="./Projects Images/08d625_99c9fd776a1543b792d05927b07c95fb~mv2.webp">
+                            <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_99c9fd776a1543b792d05927b07c95fb~mv2.webp">
                             <div class="bg-gray-950 bg-opacity-50 opacity-0 group-hover:opacity-100 absolute inset-0 p-10">
                                 <span class="block border-t border-white text-white text-2xl font-bold pt-4">
                                     River Green
@@ -85,69 +85,69 @@
                         </a>
                     </div>
                     <div>
-                        <img src="./Projects Images/08d625_fdc84421bbdd4c89afd959081020a994~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_fdc84421bbdd4c89afd959081020a994~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/08d625_8eadaa10bc8842b4b58d3dfc96410ed5~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/08d625_8eadaa10bc8842b4b58d3dfc96410ed5~mv2.webp">
                     </div>
                 </div>
             </div>
 
             <!-- Second Col -->
             <div>
-                <div class="flex flex-col p-4 space-y-10">
+                <div class="flex flex-col p-4 space-y-5 lg:space-y-10">
                     <div class="group relative">
                         <a href="#">
-                            <img src="./Projects Images/Col 2/08d625_17eadcb567af4948804dfdd8412bf066~mv2.webp">
+                            <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_17eadcb567af4948804dfdd8412bf066~mv2.webp">
                             <div class="bg-gray-950 bg-opacity-50 opacity-0 group-hover:opacity-100 absolute inset-0 p-10">
                                 <span class="block border-t border-white text-white text-2xl font-bold pt-4">Seazen</span>
                             </div>
                         </a>
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 2/08d625_5e85ed9a87f24264bb66ee0bb3a0a7a1~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_5e85ed9a87f24264bb66ee0bb3a0a7a1~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 2/08d625_aac49ce2a94e47be91c65476726650b0~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_aac49ce2a94e47be91c65476726650b0~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 2/08d625_9c0ccf49b38a4f74b0fc2c9137ecf5c2~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_9c0ccf49b38a4f74b0fc2c9137ecf5c2~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 2/08d625_911180c5397d4c7b9f00e1a2cd3de2d1~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_911180c5397d4c7b9f00e1a2cd3de2d1~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 2/08d625_a3aac5bc4f574ec7a3878809f88eecce~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_a3aac5bc4f574ec7a3878809f88eecce~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 2/08d625_8e1a172572294332aca3fe6dd0200744~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_8e1a172572294332aca3fe6dd0200744~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 2/08d625_b2c7ca2857be4722ad6c3bf5a7664738~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 2/08d625_b2c7ca2857be4722ad6c3bf5a7664738~mv2.webp">
                     </div>
                 </div>
             </div>
 
             <!-- Third Col -->
             <div>
-                <div class="flex flex-col p-4 space-y-10">
+                <div class="flex flex-col p-4 space-y-5 lg:space-y-10">
                     <div>
-                        <img src="./Projects Images/Col 3/08d625_6a9685c237574765844d3089b8d6ea9c~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_6a9685c237574765844d3089b8d6ea9c~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 3/08d625_f3c82ae0223c4d4fbb041dbbc5a6d128~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_f3c82ae0223c4d4fbb041dbbc5a6d128~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 3/08d625_dc1d593b40c445f38ffe47b0c514a6fe~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_dc1d593b40c445f38ffe47b0c514a6fe~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 3/08d625_cbeb3b5c9dad4f16a76915aae8da4e8d~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_cbeb3b5c9dad4f16a76915aae8da4e8d~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 3/08d625_f884ef790d31411bb739e9896a05038a~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_f884ef790d31411bb739e9896a05038a~mv2.webp">
                     </div>
                     <div>
-                        <img src="./Projects Images/Col 3/08d625_2fcca57b08f94eaea7c44c79509d6cbf~mv2.webp">
+                        <img class="w-full lg:w-[unset]" src="./Projects Images/Col 3/08d625_2fcca57b08f94eaea7c44c79509d6cbf~mv2.webp">
                     </div>
                 </div>
             </div>
@@ -160,8 +160,8 @@
 
     <footer>
         <div class="bg-yellow-300 flex relative flex-col items-center justify-center p-16">
-            <span class="text-4xl pb-8 pr-96">INVERSION</span>
-            <div class="grid grid-cols-2 px-72">
+            <span class="text-base lg:text-4xl pb-4 lg:pb-8 pr-48 lg:pr-96">INVERSION</span>
+            <div class="grid grid-cols-1 lg:grid-cols-2 px-4 lg:px-72">
                 <div>
                     <span class="pb-8 text-xl font-bold">Location:</span>
                     <div>
