--- a/Services.html
+++ b/Services.html
@@ -62,7 +62,7 @@
             <span class="text-base lg:text-4xl pb-4 lg:pb-8 pr-48 lg:pr-96">INVERSION</span>
             <div class="grid grid-cols-1 lg:grid-cols-2 px-4 lg:px-72">
                 <div>
-                    <span class="pb-4 lg:pb-8 text-base lg:text-xl font-bold">Location:</span>
+                    <span class="pb-4 lg:pb-8 text-xl font-bold">Location:</span>
                     <div>
                         <span>Building 2, square 127, Almoltaqa El Arabi Sheraton, Heliopolis, Cairo, Egypt</span><br>
                         <a class="underline decoration-1" href="#">Email: Info@inversion-eg.com</a><br>
