Add responsive to "team" file

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="bg-[#2d2e2d]">
-    <nav class="fixed w-full  top-0 bottom-0 left-0 right-0 z-index-10">
+    <nav class="fixed w-full  top-0  left-0 right-0 z-index-10">
     <!-- Navbar -->
         <div class=" text-white flex items-center justify-between px-16 py-4">
             <div>
