--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- win+r => cmd => space+code+space+.+enter -->
     <!-- Navbar -->
-    <nav class="fixed w-full top-0 bottom-0 left-0 right-0 z-index-10">
+    <nav class="fixed w-full top-0  left-0 right-0 z-index-10">
         <div class=" text-white flex items-center justify-around py-4">
             <div>
                 <a class="text-4xl" href="https://www.inversion-eg.com/">INVERSION</a>
