--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./Images/Icon Photo/08d625_e7f2a39dac1d4d2db7f69b2ca5864190~mv2.png" type="">
 </head>
 <body class="bg-[#2d2e2d]">
-    <nav class="fixed w-full top-0 bottom-0 left-0 right-0 z-index-10">
+    <nav class="fixed w-full top-0 left-0 right-0 z-index-10">
     <!-- Navbar -->
         <div class=" text-white flex items-center justify-between px-16 py-4">
             <div>
@@ -29,8 +29,8 @@
     <!-- Header one -->
 
     <div class=" flex flex-col items-center justify-center">
-        <div class="p-28">
-          <p class="text-white text-6xl font-bold text-center whitespace-pre-line pb-16">
+        <div class="p-14 lg:p-28">
+          <p class="text-white text-3xl lg:text-6xl font-bold text-center whitespace-pre-line pb-16">
             Meet Our Team
           </p>
           <div>
@@ -42,10 +42,10 @@
     <!-- Header Two -->
 
     <section class="max-w-5xl mx-auto">
-        <div class="grid grid-cols-3 p-4 gap-10 ">
+        <div class="grid grid-cols-1 lg:grid-cols-3 p-4 gap-10 ">
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Mohamed Diab</span><br>
                         <span class="text-white">CEO</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -54,11 +54,10 @@
                             knowledge. Diab...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state7.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state7.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Kamal Ibrahim</span><br>
                         <span class="text-white">CDO</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -67,11 +66,10 @@
                               receiving his Batchelor’s degree...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state8.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state8.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Rania Gad</span><br>
                         <span class="text-white">Marketing Director</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -80,11 +78,10 @@
                               advertising and with...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state2.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state2.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Ramy Al-Qady</span><br>
                         <span class="text-white">Development Director</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -93,11 +90,10 @@
                             Planning. He also...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state9.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state9.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Ayman Saad El Dien</span><br>
                         <span class="text-white">Projects Controls Director</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -106,11 +102,10 @@
                               and Construction Management...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state10.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state10.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Mohamed Maihoub</span><br>
                         <span class="text-white">Development Manager</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -119,11 +114,10 @@
                               team. Maihoub graduated...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state3.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state3.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Ahmed Lotfy</span><br>
                         <span class="text-white">Projects Coordinator</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -132,11 +126,10 @@
                             bachelor's...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state11.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state11.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Moamen Badrawy</span><br>
                         <span class="text-white">Assistant Project Manager</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -145,11 +138,10 @@
                               Leveraging his extensive...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state12.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state12.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Aya Saad</span><br>
                         <span class="text-white">Business Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -158,11 +150,10 @@
                               with high Honors. She’s also done...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state4.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state4.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Abeer Ibrahim</span><br>
                         <span class="text-white">Office Manager</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -171,11 +162,10 @@
                             experience and expertise...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state13.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state13.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Karim Azmy</span><br>
                         <span class="text-white">Branding & Marketing Exectuive</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -184,11 +174,10 @@
                               urban...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state14.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state14.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Menna Mostafa</span><br>
                         <span class="text-white">Account Executive</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -197,11 +186,10 @@
                               exuberant brands...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state5.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state5.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Reem Hesham</span><br>
                         <span class="text-white">Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -210,11 +198,10 @@
                             Maritime Transport with...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state15.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state15.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Rewan Hesham</span><br>
                         <span class="text-white">Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -223,11 +210,10 @@
                               Engineering. Her youthful...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state16.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state16.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Ziad Yasser</span><br>
                         <span class="text-white">Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -236,11 +222,10 @@
                               vibrant European country has played...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state6.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state6.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Mariam Khaled</span><br>
                         <span class="text-white">Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -249,11 +234,10 @@
                             degree in urban planning and Building...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
                 <div>
-                    <a href="#"><img src="./Team Images/Image-empty-state17.webp">
+                    <a href="#"><img class="w-full" src="./Team Images/Image-empty-state17.webp"></a>
                         <span class="text-white font-bold text-2xl whitespace-pre-line">Basma Tarek</span><br>
                         <span class="text-white">Development Engineer</span>
                         <p class="text-white text-sm whitespace-pre-line mb-4">
@@ -262,7 +246,6 @@
                               waves in the industry...
                         </p>
                         <a class="text-[yellow]" href="#">Read More</a>
-                    </a>
                 </div>
 
         </div>
@@ -274,8 +257,8 @@
 
     <footer>
         <div class="bg-yellow-300 flex relative flex-col items-center justify-center p-16">
-            <span class="text-4xl pb-8 pr-96">INVERSION</span>
-            <div class="grid grid-cols-2 px-72">
+            <span class="text-lg lg:text-4xl pb-4 lg:pb-8 pr-48 lg:pr-96">INVERSION</span>
+            <div class="grid grid-cols-1 lg:grid-cols-2 px-4 lg:px-72">
                 <div>
                     <span class="pb-8 text-xl font-bold">Location:</span>
                     <div>
