--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./Images/Icon Photo/08d625_e7f2a39dac1d4d2db7f69b2ca5864190~mv2.png" type="">
 </head>
 <body>
-    <nav class="fixed w-full top-0 bottom-0 left-0 right-0 z-index-10">
+    <nav class="fixed w-full top-0 left-0 right-0 z-index-10">
     <!-- Navbar -->
         <div class=" text-white flex items-center justify-between px-16 py-4">
             <div>
