Add responsive to "jobs" file

--- a/jobs.html
+++ b/jobs.html
@@ -29,34 +29,34 @@
     <!-- Header one -->
 
     <div class="mt-36 flex flex-col items-center justify-center mb-28">
-            <span class="text-[white] font-bold text-6xl pb-8">Job Listings</span>
+            <span class="text-[white] font-bold text-3xl lg:text-6xl pb-4 lg:pb-8">Job Listings</span>
     </div>
     <div>
-        <div class="relative flex flex-col mb-16">
-            <span class="border border-white text-white text-3xl p-12 mx-48">
+        <div class="relative flex mb-16 border border-white p-6 lg:p-12 mx-24 lg:mx-48 justify-between">
+            <span class=" text-white text-lg lg:text-3xl ">
                 Development Assistant Manager
-                <a href="#" class="border  border-[yellow] text-[yellow]  hover:text-black p-2 ml-60 hover:bg-[yellow]">
-                        View Job
-                </a>
             </span>
+            <a href="#" class="border p-3 border-[yellow] text-[yellow] hover:text-black  hover:bg-[yellow]">
+                View Job
+            </a>
         </div>
 
-        <div class="relative flex flex-col mb-16">
-            <span class="border border-white text-white text-3xl p-12 mx-48">
+        <div class="relative flex border border-white p-6 lg:p-12 mx-24 lg:mx-48 mb-16 justify-between">
+            <span class=" text-white text-lg lg:text-3xl  ">
                 Development Engineer
-                <a href="#" class="border  border-[yellow] text-[yellow]  hover:text-black p-2 ml-80 hover:bg-[yellow]">
-                        View Job
-                </a>
             </span>
+            <a href="#" class="border p-3 border-[yellow] text-[yellow] hover:text-black ml-20 lg:ml-80 hover:bg-[yellow]">
+                View Job
+            </a>
         </div>
 
-        <div class="relative flex flex-col mb-16">
-            <span class="border border-white text-white text-3xl p-12 mx-48">
+        <div class="relative flex border border-white mb-16 p-6 lg:p-12 mx-24 lg:mx-48 justify-between">
+            <span class=" text-white text-lg lg:text-3xl ">
                 Business Analyst
-                <a href="#" class="border  border-[yellow] text-[yellow]  hover:text-black p-2 ml-80 hover:bg-[yellow]">
-                        View Job
-                </a>
             </span>
+            <a href="#" class="border p-3 border-[yellow] text-[yellow]  hover:text-black ml-20 lg:ml-80 hover:bg-[yellow]">
+                View Job
+            </a>
         </div>
 
     </div>
@@ -65,8 +65,8 @@
 
     <footer>
         <div class="bg-yellow-300 flex relative flex-col items-center justify-center p-16">
-            <span class="text-4xl pb-8 pr-96">INVERSION</span>
-            <div class="grid grid-cols-2 px-72">
+            <span class="text-lg lg:text-4xl pb-4 lg:pb-8 pr-48 lg:pr-96">INVERSION</span>
+            <div class="grid grid-cols-1 lg:grid-cols-2 px-4 lg:px-72">
                 <div>
                     <span class="pb-8 text-xl font-bold">Location:</span>
                     <div>
