--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="bg-[#2d2e2d]">
-    <nav class="fixed w-full  top-0  left-0 right-0 z-index-10">
+    <nav class="fixed w-full top-0 left-0 right-0 z-index-10">
     <!-- Navbar -->
         <div class=" text-white flex items-center justify-between px-16 py-4">
             <div>
@@ -30,10 +30,10 @@
     <!-- Header one -->
 
     <div class="mt-36 flex flex-col items-center justify-center">
-            <span class="text-[white] font-bold text-5xl border-b border-neutral-400 mr-auto px-48">Contact</span>
+            <span class="text-[white] font-bold text-3xl lg:text-5xl border-b border-neutral-400 mr-auto px-48">Contact</span>
     </div>
 
-        <div class="mx-60 my-16">
+        <div class="mx-10 lg:mx-60 my-8 lg:my-16">
             <form class="flex flex-col">
                 <label class="text-white my-2">First Name</label>
                 <input type="text" class="p-2 text-white bg-[#2d2e2d] border border-[yellow]">
@@ -53,8 +53,8 @@
 
     <footer>
         <div class="bg-yellow-300 flex relative flex-col items-center justify-center p-16">
-            <span class="text-4xl pb-8 pr-96">INVERSION</span>
-            <div class="grid grid-cols-2 px-72">
+            <span class="text-lg lg:text-4xl pb-4 lg:pb-8 pr-48 lg:pr-96">INVERSION</span>
+            <div class="grid grid-cols-1 lg:grid-cols-2 px-4 lg:px-72">
                 <div>
                     <span class="pb-8 text-xl font-bold">Location:</span>
                     <div>
