--- a/index.html
+++ b/index.html
@@ -2,22 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <meta name="description" content="Inversion is a development consultancy built by 
+          professional industry experts who exist to challenge the status quo. 
+          With a successful track record in shaping some of Egypt’s landmark projects.">
+    <link href="./dist/output.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <title>Inversion | Development Consultancy</title>
-    <link rel="icon" href="./Images/Icon Photo/08d625_e7f2a39dac1d4d2db7f69b2ca5864190~mv2.png" type="">
+    <link rel="icon" href="./Images/Icon Photo/08d625_e7f2a39dac1d4d2db7f69b2ca5864190~mv2.webp" type="">
 </head>
 <body>
     <!-- win+r => cmd => space+code+space+.+enter -->
     <!-- Navbar -->
-    <nav class="fixed w-full top-0  left-0 right-0 z-index-10">
+    <nav class="fixed bg-[#2e2e2d] w-full top-0 left-0 right-0 z-index-10">  
         <div class=" text-white flex items-center justify-around py-4">
-            <div>
-                <a class="text-4xl" href="https://www.inversion-eg.com/">INVERSION</a>
-            </div>
+
+            <a class="text-4xl" href="https://www.inversion-eg.com/">INVERSION</a>
 
             <ul class="flex flex-row space-x-8">
-                <li class="      text-[yellow]"><a href="./index.html">Home</a></li>
+                <li class="text-[yellow]"><a href="./index.html">Home</a></li>
                 <li class="hover:text-[yellow]"><a href="./about.html">ABOUT</a></li>
                 <li class="hover:text-[yellow]"><a href="./Services.html">SERVICES</a></li>
                 <li class="hover:text-[yellow]"><a href="./projects.html">PROJECTS</a></li>
@@ -105,7 +111,7 @@
 
             <div class="grid grid-cols-1 lg:grid-cols-2 items-center justify-center max-w-3xl mx-auto">
                 <div class="flex flex-col items-center justify-center">
-                    <img class="pb-8" src="./Images/Our Services/1.webp">
+                    <img alt="Educational photo" class="pb-8" src="./Images/Our Services/1.webp">
                     <span class="text-[yellow] pl-4 text-xl">Development Services</span>
                     <p class="text-white text-center ">
                         INVERSION offers a multitude
@@ -118,7 +124,7 @@
                     </p>
                 </div>
                 <div class="flex flex-col items-center justify-center">
-                    <img class="pb-8" src="./Images/Our Services/2.webp">
+                    <img alt="Meeting" class="pb-8" src="./Images/Our Services/2.webp">
                     <span class="text-[yellow] pl-4 text-xl">Project Management</span>
                     <p class="text-white text-center ">
                         We go the extra mile as consultants to manage the
@@ -137,26 +143,26 @@
     <div class="bg-[#2d2e2d]">
         <span class="text-[white] flex items-center justify-center text-lg lg:text-5xl py-8 lg:py-16">OUR CLIENTS</span>
         <div class="grid grid-cols-3 lg:grid-cols-5 p-8">
-            <img src="./Images/Our Clients/Al ahly.webp">
-            <img src="./Images/Our Clients/La vista.webp">
-            <img src="./Images/Our Clients/Mountain view.webp">
-            <img src="./Images/Our Clients/Al-futtaim.webp">
-            <img src="./Images/Our Clients/SkyAd.webp">
-            <img src="./Images/Our Clients/Al qamzi.webp">
-            <img src="./Images/Our Clients/Magnom.webp">
-            <img src="./Images/Our Clients/Al attal.webp">
-            <img src="./Images/Our Clients/Gates.webp">
-            <img src="./Images/Our Clients/Ebny.webp">
-            <img src="./Images/Our Clients/Dar al alamia.webp">
-            <img src="./Images/Our Clients/MGB.webp">
-            <img src="./Images/Our Clients/Vai.webp">
-            <img src="./Images/Our Clients/UDG.webp">
-            <img src="./Images/Our Clients/Margins.webp">
-            <img src="./Images/Our Clients/El shennawy.webp">
-            <img src="./Images/Our Clients/SAK.webp">
-            <img src="./Images/Our Clients/Tharaa.webp">
-            <img src="./Images/Our Clients/Emtelak.webp">
-            <img src="./Images/Our Clients/Maqam.webp">
+            <img alt="Al ahly" src="./Images/Our Clients/Al ahly.webp">
+            <img alt="La vista" src="./Images/Our Clients/La vista.webp">
+            <img alt="Mountain view" src="./Images/Our Clients/Mountain view.webp">
+            <img alt="Al-futtaim" src="./Images/Our Clients/Al-futtaim.webp">
+            <img alt="SkyAd" src="./Images/Our Clients/SkyAd.webp">
+            <img alt="Al qamzi" src="./Images/Our Clients/Al qamzi.webp">
+            <img alt="Magnom" src="./Images/Our Clients/Magnom.webp">
+            <img alt="Al attal" src="./Images/Our Clients/Al attal.webp">
+            <img alt="Gates" src="./Images/Our Clients/Gates.webp">
+            <img alt="Ebny" src="./Images/Our Clients/Ebny.webp">
+            <img alt="Dar al alamia" src="./Images/Our Clients/Dar al alamia.webp">
+            <img alt="MGB" src="./Images/Our Clients/MGB.webp">
+            <img alt="Vai" src="./Images/Our Clients/Vai.webp">
+            <img alt="UDG" src="./Images/Our Clients/UDG.webp">
+            <img alt="Margins" src="./Images/Our Clients/Margins.webp">
+            <img alt="El shennawy" src="./Images/Our Clients/El shennawy.webp">
+            <img alt="SAK" src="./Images/Our Clients/SAK.webp">
+            <img alt="Tharaa" src="./Images/Our Clients/Tharaa.webp">
+            <img alt="Emtelak" src="./Images/Our Clients/Emtelak.webp">
+            <img alt="Maqam" src="./Images/Our Clients/Maqam.webp">
         </div>
     </div>
 
